[project]
name = "rag-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.0",
    "docx2txt>=0.9",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-openai>=1.0.1",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pypdf>=6.1.3",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "streamlit>=1.51.0",
    "tqdm>=4.67.1",
]
